[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Enemies/MMDG-1.png (1).png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies_Fazzi/Boss_1.gd" type="Script" id=2]
[ext_resource path="res://SFX/Sound effects Pack 2/Sound effects Pack 2/Random/WAV/Random 3 - Sound effects Pack 2.wav" type="AudioStream" id=3]
[ext_resource path="res://SFX/Sound effects Pack 2/Sound effects Pack 2/Coins/WAV/Coins 3 - Sound effects Pack 2.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.3226, 15.3184 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.1154, 17.0044 )

[sub_resource type="Animation" id=3]
resource_name = "move"
length = 27.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4, 5, 6, 6.2, 6.4, 6.6, 6.8, 7, 7.2, 8.3, 8.5, 8.7, 8.9, 9.1, 10, 11.5, 12.1, 13, 13.5, 14, 14.5, 15, 15.6, 17, 18, 18.2, 18.4, 18.6, 18.8, 19, 19.2, 19.4, 21.4, 23, 24, 26 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 320, 330 ), Vector2( 700, 330 ), Vector2( 700, 330 ), Vector2( 800, -20 ), Vector2( 800, 350 ), Vector2( 800, -20 ), Vector2( 800, 350 ), Vector2( 800, -20 ), Vector2( 800, 350 ), Vector2( 800, -20 ), Vector2( 500, -20 ), Vector2( 500, 350 ), Vector2( 500, -20 ), Vector2( 500, 350 ), Vector2( 500, -20 ), Vector2( 250, 300 ), Vector2( 10, -20 ), Vector2( 10, -20 ), Vector2( 10, 150 ), Vector2( 250, 220 ), Vector2( 450, 100 ), Vector2( 600, 250 ), Vector2( 800, 80 ), Vector2( 800, 80 ), Vector2( 250, 220 ), Vector2( 80, -20 ), Vector2( 80, 350 ), Vector2( 80, -20 ), Vector2( 80, 350 ), Vector2( 80, -20 ), Vector2( 80, 350 ), Vector2( 80, -20 ), Vector2( -38.184, 350 ), Vector2( 450, 350 ), Vector2( 905.78, 6.01837 ), Vector2( 913.426, 310.557 ), Vector2( -46.6931, 316.533 ) ]
}

[node name="Boss_1_Root" type="Node2D"]

[node name="Boss_1_KinematicBody" type="KinematicBody2D" parent="."]
scale = Vector2( 3, 2.5 )
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Boss_1_Sprite" type="Sprite" parent="Boss_1_KinematicBody"]
scale = Vector2( 1, 1.19048 )
texture = ExtResource( 1 )

[node name="Boss_1_Col" type="CollisionShape2D" parent="Boss_1_KinematicBody"]
scale = Vector2( 1, 1.19048 )
shape = SubResource( 1 )

[node name="Boss_1_Hit" type="Area2D" parent="Boss_1_KinematicBody"]
scale = Vector2( 1, 1.19048 )
collision_layer = 2
collision_mask = 4

[node name="Boss_1_Col_Hit" type="CollisionShape2D" parent="Boss_1_KinematicBody/Boss_1_Hit"]
shape = SubResource( 2 )

[node name="Boss_1_Animation" type="AnimationPlayer" parent="Boss_1_KinematicBody"]
anims/move = SubResource( 3 )

[node name="Boss_1_Visibility" type="VisibilityNotifier2D" parent="Boss_1_KinematicBody"]
position = Vector2( 133.402, 90.3657 )
scale = Vector2( 21.2348, 19.2654 )

[node name="Boss_Hit_SFX" type="AudioStreamPlayer" parent="Boss_1_KinematicBody"]
stream = ExtResource( 4 )

[node name="Boss_Death_SFX" type="AudioStreamPlayer" parent="Boss_1_KinematicBody"]
stream = ExtResource( 3 )
[connection signal="area_entered" from="Boss_1_KinematicBody/Boss_1_Hit" to="Boss_1_KinematicBody" method="_on_Boss_1_Hit_area_entered"]
